// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create a topic 1`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_topic",
        "props": {},
        "type": "wingsdk.cloud.Topic",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_topic": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A pub/sub notification topic",
            "title": "Topic",
          },
          "id": "my_topic",
          "path": "root/my_topic",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`topic publishes messages as they are received 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.cloud.Topic created.",
  "wingsdk.sim.EventMapping created.",
  "Publish (message=Alpha).",
  "Sending message (message=Alpha, subscriber=sim-1).",
  "Received Alpha",
  "Invoke (payload=\\"Alpha\\").",
  "Publish (message=Beta).",
  "Sending message (message=Beta, subscriber=sim-1).",
  "Received Beta",
  "Invoke (payload=\\"Beta\\").",
  "wingsdk.sim.EventMapping deleted.",
  "wingsdk.cloud.Topic deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`topic publishes messages to multiple subscribers 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.cloud.Topic created.",
  "wingsdk.sim.EventMapping created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.sim.EventMapping created.",
  "Publish (message=Alpha).",
  "Sending message (message=Alpha, subscriber=sim-1).",
  "Received Alpha",
  "Invoke (payload=\\"Alpha\\").",
  "Sending message (message=Alpha, subscriber=sim-4).",
  "Also received Alpha",
  "Invoke (payload=\\"Alpha\\").",
  "wingsdk.sim.EventMapping deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.sim.EventMapping deleted.",
  "wingsdk.cloud.Topic deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;
